# face-alignment

./: .gitignore  .travis.yml  2DFAN-4-onnx.py  Dockerfile  LICENSE  README.md  README.rst  demo.ipynb  min_test.py  requirements.txt  setup.cfg  setup.py  test_face_align.py  torch2oneflow.py  tox.ini
.github/workflows/: test.yml
conda/: conda_build_config.yaml  conda_upload.sh  meta.yaml
examples/: demo.ipynb  detect_landmarks_in_image.py
face_alignment/: __init__.py  api.py  folder_data.py  models.py  utils.py
face_alignment/detection/: __init__.py  core.py
face_alignment/detection/blazeface/: blazeface_detector.py  detect.py  net_blazeface.py  utils.py
face_alignment/detection/dlib/: dlib_detector.py
face_alignment/detection/folder/: folder_detector.py
face_alignment/detection/retinaface/: __init__.py  box_utils.py  mobilenet.py  net_retinaface.py  prior_box.py  retinaface_detector.py
face_alignment/detection/scrfd/: __init__.py  postprocess.py  scrfd_detector.py
face_alignment/detection/sfd/: bbox.py  detect.py  net_s3fd.py  sfd_detector.py
face_alignment/detection/yunet/: __init__.py  yunet_detector.py
face_alignment/models/: __init__.py  fan.py  resnet.py
face_alignment_of/: api.py
face_alignment_of/detection/sfd/: globalVar.py  layer_test.py  load_weights.py  net_s3fd.py  of_net_s3fd.py  test-1.py  test-2.py  test.py
face_alignment_oneflow/: api.py  utils.py
face_alignment_oneflow/detection/sfd/: detect.py  (+2 more)
fix_info/: bad_behaviour_example.ipynb
test/: facealignment_test.py  smoke_test.py  test_detectors.py  test_utils.py
