[bumpversion]
current_version = 1.5.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:face_alignment/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
description_file = README.md

[bdist_wheel]
universal = 0

[flake8]
exclude =
    .github,
    examples,
    local_tests,
    docs,
    .tox,
    bin,
    dist,
    build,
    tools,
    *.egg-info,
    __init__.py,
    *.yml
max-line-length = 160
ignore = F401,F403,F405,E402,W292,W293,E275,E261,E231,E302,E303,E305